--- a/src/components/events.css
+++ b/src/components/events.css
@@ -8,7 +8,7 @@
 }
 
 .swiper-container {
-    width: 100%;
+    width: 80%;
     height: 88vh;
     margin-left: auto;
     margin-right: auto;
@@ -37,9 +37,9 @@
 }
 
 .border-box {
-    max-width: 90%;
+    max-width: 80%;
     margin: 90px auto;
-    width: 100%;
+    /*width: 100%;*/
     height: 440px;
     box-shadow: 0px -5px 10px 0px rgba(177, 177, 177, 0.5)
 }
