--- a/src/components/Elicit.css
+++ b/src/components/Elicit.css
@@ -76,6 +76,7 @@
 .ElicitContentContainer {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .ElicitEventTitle {
