--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -13,13 +13,13 @@ body {
     position: relative;
 }
 
-video {
+#heroVideo video {
     width: 100%;
     height: 100%;
 }
 
 body {
-    background: #eee;
+    background: #ffffff;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: #000;
@@ -27,7 +27,7 @@ body {
     padding: 0;
 }
 
-.swiper {
+#heroVideo .swiper {
     width: 100%;
     max-height: 100vh;
 }
@@ -43,9 +43,10 @@ body {
 
 .swiper-slide video {
     display: block;
-    width: 100%;
+    width: 100vw !important;
     /*height: 100vh;*/
     object-fit: cover;
+    overflow: hidden;
 }
 
 .swiper-pagination-fraction, .swiper-pagination-custom, .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
