--- a/src/components/landingPageGallery.css
+++ b/src/components/landingPageGallery.css
@@ -1,10 +1,10 @@
-body {
+/*body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background: #000;
-}
+}*/
 
 .box {
     position: relative;
