--- a/src/components/landingPageConvener.css
+++ b/src/components/landingPageConvener.css
@@ -5,7 +5,7 @@
     min-height: auto;
     background: linear-gradient(135deg, #000000, #000000);
     padding: 10px;
-    margin-bottom: 100px;
+    /*margin-bottom: 100px;*/
 }
 
 .card0 {
