--- a/src/components/CounterCards.css
+++ b/src/components/CounterCards.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
+    user-select: none;
 }
 
 #animated-box .counterCards-text h1 {
