--- a/src/components/events.css
+++ b/src/components/events.css
@@ -2,6 +2,20 @@
     padding-top: 45px;
 }
 
+.heading {
+    text-align: center;
+    font-size: 2.4rem;
+    font-weight: 800;
+    margin: 5rem;
+    background: linear-gradient(91deg, #3D1F7A 45.76%, #D1C2F0 80.43%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .swiper-container .heading {
     padding-bottom: 0;
     margin-bottom: 0;
@@ -69,6 +83,10 @@ and (max-device-width: 480px) {
         margin-left: auto;
         margin-right: auto;
 
+    }
+
+    .heading {
+        font-size: 1.9rem;
     }
 }
 
