--- a/src/components/RTE.css
+++ b/src/components/RTE.css
@@ -104,6 +104,7 @@
     backdrop-filter: blur( 3px );
     -webkit-backdrop-filter: blur( 3px );
     border: 2px solid rgba( 255, 255, 255, 0.18 );
+    margin-bottom: 100px;
 }
 
 .RTEPosters {
