--- a/src/components/events.css
+++ b/src/components/events.css
@@ -90,7 +90,57 @@ and (max-device-width: 480px) {
     }
 }
 
-@media only screen and (min-width: 1550px) {
+@media only screen and (orientation: portrait)
+and (min-device-width: 480px)
+and (max-device-width: 768px) {
+    .swiper-container .swiper .swiper-slide {
+        background-position: center;
+        background-size: cover;
+        width: 240px;
+        height: 230px;
+    }
+
+    .border-box {
+        max-width: 90%;
+        margin: 90px auto;
+        width: 100%;
+        height: 320px;
+        box-shadow: 0px -5px 10px 0px rgba(177, 177, 177, 0.5)
+    }
+}
+
+@media only screen
+and (min-device-width: 768px)
+and (max-device-width: 1100px) {
+    .swiper-container .swiper .swiper-slide {
+        background-position: center;
+        background-size: cover;
+        width: 280px;
+        height: 230px;
+    }
+
+    .border-box {
+        max-width: 90%;
+        margin: 90px auto;
+        width: 100%;
+        height: 320px;
+        box-shadow: 0px -5px 10px 0px rgba(177, 177, 177, 0.5)
+    }
+
+    .swiper-container {
+        width: 100%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+
+    .heading {
+        font-size: 2rem;
+    }
+}
+
+    @media only screen and (min-width: 1550px) {
     .swiper-container .swiper .swiper-slide {
         background-position: center;
         background-size: cover;
