--- a/src/components/landingPage.css
+++ b/src/components/landingPage.css
@@ -71,3 +71,41 @@
         height: auto;
     }
 }
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .PastEvents {
+        height: auto;
+        /*margin-bottom: 200px;*/
+    }
+
+    .CarouselLandingGallery {
+        position: relative;
+        max-width: 80%;
+        margin: 20vh auto 20vh;
+        /*overscroll-behavior-x: contain;*/
+        height: auto;
+        display: flex;
+        justify-content: center;
+    }
+
+    .UpcomingEvents {
+        height: 100vh;
+        margin: 50vh 0 0 0;
+        position: relative;
+    }
+
+    .title-heading2 {
+        position: relative;
+        /*top: 200px;*/
+    }
+
+    .Footer {
+        height: auto;
+    }
+
+    .Convener {
+        position: relative;
+        /*margin-bottom: 200px;*/
+        height: auto;
+    }
+}
