--- a/src/components/landingPageHero.css
+++ b/src/components/landingPageHero.css
@@ -13,15 +13,14 @@ video {
     width: 100%;
     height: 100%;
 }
-/*
 body {
-    background: #eee;
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    color: #000;
-    margin: 0;
-    padding: 0;
-}*/
+    background: #000000;
+    /*font-family: Helvetica Neue, Helvetica, Arial, sans-serif;*/
+    /*font-size: 14px;*/
+    /*color: #000;*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+}
 
 .swiper {
     width: 100%;
