--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,10 @@ body {
     z-index: 1;
     margin-bottom: 50px;
 }
-
+/*
 .RootDiv {
     background-image: url("./assets/background-svg.svg");
     height: 100%;
     background-repeat: repeat-y;
     z-index: -100;
-}
+}*/
