--- a/src/components/landingPageConvener.css
+++ b/src/components/landingPageConvener.css
@@ -5,7 +5,6 @@
     min-height: auto;
     background: linear-gradient(135deg, #000000, #000000);
     padding: 10px;
-    /*margin-bottom: 100px;*/
 }
 
 .card0 {
@@ -25,25 +24,25 @@
     transform-style: preserve-3d;
 }
 
-.front0, .back0 {
+.front0,
+.back0 {
     width: 100%;
     height: 100%;
     border-radius: 15px;
     position: absolute;
     backface-visibility: hidden;
     box-shadow: 0 0 20px 5px #a257db;
-
+    -webkit-box-shadow: 0 0 20px 5px #a257db; /* Add -webkit prefix for Safari */
 }
 
 .front0 {
     background-size: cover;
-    /*background-position: center;*/
-    background-repeat: no-repeat;
     padding: 60px 40px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     color: #fff;
+    background-repeat: no-repeat; /* Fix potential background rendering issue */
 }
 
 .Person-10 {
@@ -79,6 +78,7 @@
     color: #333;
     padding: 20px 30px;
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg); /* Add -webkit prefix for Safari */
 }
 
 .back0 h1 {
@@ -163,6 +163,7 @@
 }
 
 @media (max-width: 768px) {
+    /* Media query for small screens */
 
     .back0 a {
         width: 50px;
@@ -174,18 +175,18 @@
         justify-content: center;
         margin: 0 5px;
     }
+
     .containerof-20 {
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
-        /*overflow: hidden;*/
-        /*margin-bottom: 200px;*/
         height: auto;
     }
-
 }
 
-@media only screen and (min-width: 768px) and (max-width:1100px) {
+@media only screen and (min-width: 768px) and (max-width: 1100px) {
+    /* Media query for medium-sized screens */
+
     .card0 {
         width: 270px;
         height: 390px;
