--- a/src/components/landingPageConvener.css
+++ b/src/components/landingPageConvener.css
@@ -58,19 +58,19 @@
 }
 
 .Person-10 {
-    background-image: url("../assets/images/Convener/soham.png");
+    background-image: url("../assets/images/Convener/soham.webp");
 }
 
 .Person-20 {
-    background-image: url("../assets/images/Convener/nikunj.png");
+    background-image: url("../assets/images/Convener/nikunj.webp");
 }
 
 .Person-30 {
-    background-image: url("../assets/images/Convener/vishesh.png");
+    background-image: url("../assets/images/Convener/vishesh.webp");
 }
 
 .Person-40 {
-    background-image: url("../assets/images/Convener/mainImage.png");
+    background-image: url("../assets/images/Convener/harshit.webp");
 }
 
 .front0 h2 {
