--- a/src/components/teams.css
+++ b/src/components/teams.css
@@ -36,6 +36,7 @@
 }
 
 .container .card {
+    display: flex;
     position: relative;
     width: 300px;
     height: 405px;
@@ -44,6 +45,7 @@
     transition: 0.3s;
     color: white;
     text-shadow: 2px 4px 4px rgba(0, 0, 0, 50);
+    justify-content: center;
 }
 
 /* .container .card:hover {
