--- a/src/components/upcomingEventsMainPage.css
+++ b/src/components/upcomingEventsMainPage.css
@@ -1,11 +1,5 @@
 .UEMP {
     position: relative;
-    top: 50px;
-    overflow-scrolling: auto;
-}
-
-@media only screen and (max-width: 768px) {
-    .footer-UEMP {
-        transform: translateY(85vh);
-    }
+    margin-top: 70px;
+    margin-bottom: 100px;
 }
