--- a/src/index.css
+++ b/src/index.css
@@ -15,17 +15,6 @@
 
 
 
-.event-container{
-  width: 90vw;
-  padding: 10px;
-  margin: 50px;
-
-}
-.event-wrapper{
-  width: 300px;
-  height: 423px;
-  margin: 20px;
-}
 .remove{
   width: 100%;
   height: 100%;
@@ -217,6 +206,8 @@
 }
 .event-page{
   background-color: #000000;
+  max-width: 90%;
+  margin: 0 auto;
 }
 .toggle-container{
   display: flex;
